MDEV-11202: InnoDB 10.1 -> 10.2 migration does not work
Remove MariaDB extended tablespace and dictionary flags
from tablespace flags and dictionary flags (SYS_TABLES.TYPE).
Adds a new system table SYS_TABLEOPTIONS where MariaDB
table options are stored and information_schema table
to query them. Automatically fixes dictionary flags
and tablespace flags so that MariaDB extended
are removed. This patch also removes atomic writes
option. Atomic writes will be transparently used
with patch submitted later.

--- a/storage/innobase/CMakeLists.txt
+++ b/storage/innobase/CMakeLists.txt
@@ -64,6 +64,7 @@ SET(INNOBASE_SOURCES
 	dict/dict0stats.cc
 	dict/dict0stats_bg.cc
 	dict/dict0defrag_bg.cc
+	dict/dict0tableoptions.cc
 	eval/eval0eval.cc
 	eval/eval0proc.cc
 	fil/fil0fil.cc
